# Aphro

./: .gitignore  CMakeLists.txt  License.txt  README.md
Aphro/: .gitignore  CMakeLists.txt
Aphro/Assets/Shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
Aphro/Core/: Camera.cpp  Camera.h  GameApp.cpp  GameApp.h  GameObject.cpp  GameObject.h  Utils.h
Aphro/Graphics/: Model.cpp  Model.h
Aphro/Pipeline/: VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Aphro/Rendering/: FrameInfo.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  SimpleRenderPipeline.cpp  SimpleRenderPipeline.h
Aphro/Rendering/Systems/: PointLightBillboard.cpp  PointLightBillboard.h  SimpleRenderPipeline.cpp  SimpleRenderPipeline.h
Aphro/Rendering/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Aphro/Window/: VulkanWindow.cpp  VulkanWindow.h
Sandbox/: CMakeLists.txt  SimpleMovementController.cpp  SimpleMovementController.h  main.cpp
Scripts/: compile_shaders.py
